--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<form action='http://localhost:3000/upload' method="POST" enctype="multipart/form-data">
+<form action='https://db-images-mixidev.herokuapp.com/upload' method="POST" enctype="multipart/form-data">
     <input type="file" name="file">
     <input type="submit" value="Subir">
 </form>
